--- a/app/src/main/res/drawable/dot_unselected.xml
+++ b/app/src/main/res/drawable/dot_unselected.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:gravity="center">
+
+        <shape android:shape="oval">
+            <solid android:color="#D9D9D9"/>
+            <size
+                android:width="8dp"
+                android:height="8dp"/>
+        </shape>
+    </item>
+</layer-list>
+
+<!--
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="#D9D9D9"/>
-    <size android:width="10dp" android:height="10dp"/>
+    <size android:width="2dp" android:height="2dp"/>
 </shape>
+-->
