--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,19 @@
         <item name="tabIndicatorHeight">0dp</item>
         <item name="tabPaddingStart">7dp</item>
         <item name="tabPaddingEnd">7dp</item>
-        <item name="tabBackground">@drawable/tab_indicator_selector</item>
+        <item name="tabBackground">@drawable/selector_tab_indicator</item>
+    </style>
+
+    <!-- 선택된 탭 라벨용 텍스트 스타일 -->
+    <style name="TextAppearance.BottomNav.Active" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="fontFamily">@font/pretendard_gov_medium</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <!-- 미선택된 탭 라벨용 텍스트 스타일 -->
+    <style name="TextAppearance.BottomNav.Inactive" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="fontFamily">@font/pretendard_gov_medium</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
     <style name="Theme.Mokathon" parent="Base.Theme.Mokathon" />
