--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,13 @@
         <item name="tabBackground">@drawable/selector_tab_indicator</item>
     </style>
 
+    <style name="CustomNavigationView" parent="Widget.Material3.BottomNavigationView">
+        <item name="itemIconSize">24dp</item>
+        <item name="itemIconTint">@color/selector_bottom_nav</item>
+        <item name="itemTextColor">@color/selector_bottom_nav</item>
+        <item name="android:background">@drawable/bg_bottom_nav</item>
+        <item name="labelVisibilityMode">labeled</item>
+    </style>
+
     <style name="Theme.Mokathon" parent="Base.Theme.Mokathon" />
 </resources>
