--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
     android:id="@+id/homeactivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FEFEFE"
+    android:background="#F0F0F0"
     android:fitsSystemWindows="true"
     tools:context=".HomeActivity">
 
