--- a/app/src/main/res/layout/fragment_chatbot.xml
+++ b/app/src/main/res/layout/fragment_chatbot.xml
@@ -8,7 +8,7 @@
     android:id="@+id/chatbot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FEFEFE"
+    android:background="#F0F0F0"
     tools:context=".ChatbotFragment">
 
     <TextView
