--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
         android:id="@+id/tv_greeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="안녕하세요, 님"
+        tools:text="안녕하세요, 님"
         android:fontFamily="@font/pretendard_gov_semibold"
         android:textSize="20sp"
         android:textColor="#010101"
