--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,6 +11,20 @@
     android:background="#F0F0F0"
     tools:context=".ProfileFragment">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_text_greeting_v"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_text_greeting_h"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.015" />
+
     <TextView
         android:id="@+id/tv_profile"
         android:layout_width="wrap_content"
@@ -19,17 +33,26 @@
         android:fontFamily="@font/pretendard_gov_semibold"
         android:textSize="20sp"
         android:textColor="#010101"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/guideline_text_greeting_v"
+        app:layout_constraintTop_toTopOf="@id/guideline_text_greeting_h"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_text_greeting_h_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.053" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_profile_pic"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_profile"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:elevation="0.5dp"
+        app:layout_constraintWidth_percent="0.25"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toTopOf="@id/guideline_text_greeting_h_end"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.04"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:shapeAppearanceOverlay="@style/CircleImageView"
@@ -39,27 +62,29 @@
         android:id="@+id/tv_profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="님"
+        tools:text="권관우 님"
         android:fontFamily="@font/pretendard_gov_semibold"
         android:textSize="24sp"
         android:textColor="#010101"
-        android:layout_marginTop="15dp"
+        app:layout_constraintVertical_bias="0.04"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_profile_pic" />
+        app:layout_constraintTop_toBottomOf="@id/iv_profile_pic"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/tv_profile_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="\@gmail.com"
+        tools:text="kwanwoo0929\@gmail.com"
         android:fontFamily="@font/pretendard_gov_medium"
         android:textSize="12sp"
         android:textColor="#999999"
-        android:layout_marginTop="4dp"
+        app:layout_constraintVertical_bias="0.01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_profile_name" />
+        app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 
