--- a/app/src/main/res/layout/list_item_post.xml
+++ b/app/src/main/res/layout/list_item_post.xml
@@ -17,7 +17,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <TextView
                 android:id="@+id/tv_post_title"
                 android:layout_width="wrap_content"
@@ -27,7 +26,7 @@
                 android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:textSize="18sp"
+                android:textSize="19sp"
                 android:textStyle="bold"
                 tools:text="게시글 제목" />
 
@@ -55,10 +54,37 @@
             android:id="@+id/tv_post_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="9dp"
             android:maxLines="2"
             android:ellipsize="end"
             tools:text="게시글 내용이 간략하게 표시됩니다. 내용이 길어지면 ...으로 잘립니다." />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/iv_like"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:src="@drawable/ic_like_border"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                app:tint="@color/black"
+                android:contentDescription="좋아요 버튼" />
+
+            <TextView
+                android:id="@+id/tv_like_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="0"
+                android:textSize="12sp"
+                android:textColor="@color/black" />
+        </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
