--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark_gray">#333333</color>
     <color name="red">#FF0000</color>
+    <color name="purple_500">#FF6200EE</color>
 </resources>
