--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="blue">#FF0000FF</color>
     <color name="light_blue">#FFADD8E6</color>
+    <color name="my_orange">#FF922B</color>
 </resources>
