--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -120,6 +120,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:clipToOutline="true"
         android:elevation="1dp"
+        android:translationZ="2dp"
         app:layout_constraintHeight_percent="0.13"
         app:layout_constraintWidth_percent="0.3"
         app:layout_constraintTop_toBottomOf="@id/tv_profile_email"
@@ -149,7 +150,7 @@
             android:layout_height="wrap_content"
             android:text="내가 쓴 글"
             android:textSize="14sp"
-            android:textColor="#010101"
+            android:textColor="#555555"
             android:fontFamily="@font/pretendard_gov_medium"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -162,7 +163,8 @@
     <com.google.android.material.divider.MaterialDivider
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:elevation="2dp"
+        android:elevation="1dp"
+        android:translationZ="3dp"
         app:dividerColor="#999999"
         app:layout_constraintWidth_percent="0.004"
         app:layout_constraintHeight_percent="0.07"
@@ -180,6 +182,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:clipToOutline="true"
         android:elevation="1dp"
+        android:translationZ="2dp"
         app:layout_constraintHeight_percent="0.13"
         app:layout_constraintWidth_percent="0.3"
         app:layout_constraintTop_toBottomOf="@id/tv_profile_email"
@@ -208,7 +211,7 @@
             android:layout_height="wrap_content"
             android:text="공감한 글"
             android:textSize="14sp"
-            android:textColor="#010101"
+            android:textColor="#555555"
             android:fontFamily="@font/pretendard_gov_medium"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -221,7 +224,8 @@
     <com.google.android.material.divider.MaterialDivider
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:elevation="2dp"
+        android:elevation="1dp"
+        android:translationZ="3dp"
         app:dividerColor="#999999"
         app:layout_constraintWidth_percent="0.004"
         app:layout_constraintHeight_percent="0.07"
@@ -239,6 +243,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:clipToOutline="true"
         android:elevation="1dp"
+        android:translationZ="2dp"
         app:layout_constraintHeight_percent="0.13"
         app:layout_constraintWidth_percent="0.3"
         app:layout_constraintTop_toBottomOf="@id/tv_profile_email"
@@ -267,7 +272,7 @@
             android:layout_height="wrap_content"
             android:text="제보 횟수"
             android:textSize="14sp"
-            android:textColor="#010101"
+            android:textColor="#555555"
             android:fontFamily="@font/pretendard_gov_medium"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -284,6 +289,7 @@
         android:background="@drawable/bg_profile_dashboard_bottomcorner"
         android:foreground="?attr/selectableItemBackground"
         android:elevation="1dp"
+        android:translationZ="2dp"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintWidth_percent="0.9"
         app:layout_constraintTop_toBottomOf="@id/profile_dashboard_first"
@@ -313,7 +319,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:src="@drawable/ic_profile_dashboard"
-                app:layout_constraintHeight_percent="0.45"
+                app:layout_constraintHeight_percent="0.7"
                 app:layout_constraintWidth_percent="0.07"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -325,8 +331,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="이전 분석 기록 확인하기"
-                android:fontFamily="@font/pretendard_gov_semibold"
-                android:textSize="14sp"
+                android:fontFamily="@font/pretendard_gov_medium"
+                android:textSize="16sp"
                 android:textColor="#FAF6F5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -348,6 +354,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:clipToOutline="true"
         android:elevation="1dp"
+        android:translationZ="2dp"
         app:layout_constraintWidth_percent="0.9"
         app:layout_constraintHeight_percent="0.07"
         app:layout_constraintTop_toBottomOf="@id/profile_dashboard_bottom"
@@ -386,6 +393,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:clipToOutline="true"
         android:elevation="1dp"
+        android:translationZ="2dp"
         app:layout_constraintWidth_percent="0.9"
         app:layout_constraintHeight_percent="0.07"
         app:layout_constraintTop_toBottomOf="@id/profile_settings_1"
@@ -424,6 +432,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:clipToOutline="true"
         android:elevation="1dp"
+        android:translationZ="2dp"
         app:layout_constraintWidth_percent="0.9"
         app:layout_constraintHeight_percent="0.07"
         app:layout_constraintTop_toBottomOf="@id/profile_settings_2"
@@ -462,6 +471,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:clipToOutline="true"
         android:elevation="1dp"
+        android:translationZ="2dp"
         app:layout_constraintWidth_percent="0.9"
         app:layout_constraintHeight_percent="0.07"
         app:layout_constraintTop_toBottomOf="@id/profile_settings_3"
@@ -500,6 +510,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:clipToOutline="true"
         android:elevation="1dp"
+        android:translationZ="2dp"
         app:layout_constraintWidth_percent="0.9"
         app:layout_constraintHeight_percent="0.07"
         app:layout_constraintTop_toBottomOf="@id/profile_settings_4"
